# endstream

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
include/: endianness.h  endianness_helper.h  endifstream.h  endistringstream.h  endofstream.h  endostream.h  endostringstream.h  endstream.h
include/endstream/: buffer_util.h  endianness.h  endifstream.h  endistream.h  endistringstream.h  endofstream.h  endostream.h  endostringstream.h  endstream.h  system_endianness.h
sample/: CMakeLists.txt  endstreamsample
sample/src/: main.cpp
src/: buffer_util.cpp  endianness_helper.cpp  endifstream.cpp  endistringstream.cpp  endofstream.cpp  endostringstream.cpp  system_endianness.cpp
test/: CMakeLists.txt  buffer_util_test.cpp
test/src/: buffer_util_test.cpp  endifstream_test.cpp  endistringstream_test.cpp  endofstream_test.cpp  endostringstream_test.cpp  system_endianness_test.cpp
tests/: CMakeLists.txt
tests/src/: buffer_util_test.cpp  endifstream_test.cpp  endistringstream_test.cpp  endofstream_test.cpp  endostringstream_test.cpp  system_endianness_test.cpp
